objects/PortalNotificationModule__c.object
<CustomObject>
    <fields>
        <fullName>ContentModule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContentModule</label>
        <referenceTo>ContentModule__c</referenceTo>
        <relationshipLabel>PortalNotificationModules</relationshipLabel>
        <relationshipName>PortalNotificationModules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PortalNotificationModuleEID__c</fullName>
        <label>PortalNotificationModuleEID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PortalNotificationSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PortalNotificationSchedule</label>
        <referenceTo>PortalNotificationSchedule__c</referenceTo>
        <relationshipLabel>PortalNotificationModules</relationshipLabel>
        <relationshipName>PortalNotificationModules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PortalNotificationModule</label>
    <nameField>
        <label>PortalNotificationModule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PortalNotificationModules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>